--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Shana tova
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,400;0,600;0,700;1,400;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/MyOwnWebsite/assets/css/style.css" />
+    <title>Lidor Portfolio</title>
+  </head>
+  <body>
+    <section>
+      <!-- navigation -->
+      <nav>
+        <a href="#" class="logo"> ITs Me </a>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="text-container">
+        <p>Hi There!</p>
+        <p>Im Lidor A</p>
+        <p>Im FullStack Developer</p>
+        <button href="https://google.com" class="hire-btn">Hire me</button>
+        <button class="down-cv">My CV</button>
+      </div>
+    </section>
+    <div class="full-container">
+      <div class="about-container">
+        <!-- <img src="/MyOwnWebsite/assets/imgs/about-img.png" alt="" /> -->
+        <div class="about-text">
+          <p>About Me</p>
+          <p>FullStack Developer</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
+            nulla odit, hic quo cumque corporis atque quis, dolore ipsum
+            doloremque sed? Tempore ex quas ipsa.
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+            est, totam repudiandae amet iusto, qui sunt ea aperiam blanditiis
+            excepturi doloremque accusantium consequatur voluptate. Architecto
+            eum similique esse recusandae debitis.
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
