--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     </section>
     <div class="full-container">
       <div class="about-container">
-        <!-- <img src="/MyOwnWebsite/assets/imgs/about-img.png" alt="" /> -->
         <div class="about-text">
           <p>About Me</p>
           <p>FullStack Developer</p>
@@ -57,6 +56,16 @@
             eum similique esse recusandae debitis.
           </p>
         </div>
+      </div>
+
+      <div class="skills-container">
+        <div class="box-1">
+          <div class="js"><p>Html</p></div>
+        </div>
+        <div class="box-2"><p>Css</p></div>
+        <div class="box-3"><p>Js</p></div>
+        <div class="box-4"><p>React</p></div>
+        <div class="box-5"><p>Node</p></div>
       </div>
     </div>
   </body>
