--- a/index.html
+++ b/index.html
@@ -58,15 +58,79 @@
         </div>
       </div>
 
-      <div class="skills-container">
-        <div class="box-1">
-          <div class="js"><p>Html</p></div>
-        </div>
+      <!-- <div class="skills-container">
+        <div class="box-1"><p>Html</p></div>
         <div class="box-2"><p>Css</p></div>
         <div class="box-3"><p>Js</p></div>
         <div class="box-4"><p>React</p></div>
         <div class="box-5"><p>Node</p></div>
+      </div> -->
+      <div class="skills-container">
+        <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <div class="box-1"><p>Html</p></div>
+            </div>
+            <div class="flip-box-back">
+              <img
+                src="/MyOwnWebsite/assets/imgs/html.png"
+                style="height: 100%; width: 100%"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <div class="box-2"><p>Css</p></div>
+            </div>
+            <div class="flip-box-back">
+              <img
+                src="/MyOwnWebsite/assets/imgs/css.png"
+                style="height: 100%; width: 100%"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <div class="box-3"><p>Js</p></div>
+            </div>
+            <div class="flip-box-back">
+              <img
+                src="/MyOwnWebsite/assets/imgs/js.png"
+                style="height: 100%; width: 100%"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <div class="box-4"><p>React</p></div>
+            </div>
+            <div class="flip-box-back">
+              <img
+                src="/MyOwnWebsite/assets/imgs/react.png"
+                style="height: 100%; width: 100%"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <div class="box-5"><p>Node</p></div>
+            </div>
+            <div class="flip-box-back">
+              <img src="/MyOwnWebsite/assets/imgs/node.png" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
+    <!-- tests -->
   </body>
 </html>
